--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,38 +1,34 @@
 body{
-	margin: 70px;
+    margin: 70px;
 }
-#ken{
-	color: #EC4067;
-	font-family:  Nunito;
+div.menu{
+    display: flex;
+    justify-content: space-between;
 }
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  }
-
-li {
-  float: right;
-   padding: 15px;
-
+div.menu ul{
+    margin: 0;
+    padding: 70px;
+    list-style: none;
+    font-family: 'Nunito', sans-serif
 }
-.flex-container {
-  display: flex;
-  background-color: white;
+div.menu ul li{
+    display: inline-block;
+padding: 15px;
 }
 
-.flex-container > div {
-  background-color: white;
-  margin: 10px;
-  padding: 20px;
-  font-size: 20px;
-}
-.en{
+.rol{
   background-color: #EC4067; 
   border: none; 
   color: white; 
-  padding: 10px 30px;
+  padding: 0px 20px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 12px;
+  border-radius: 12px;
+}
+ 
+#ken{
+    color: #EC4067;
+    font-family: 'Nunito', sans-serif;
 }
 
 .column {
@@ -50,28 +46,216 @@ li {
   clear: both;
 }
 .p1{
-	font-size: 28px;
+    font-size: 20px;
+    font-family: 'Nunito', sans-serif;
+}
+.qw{ 
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
 }
 #lore{
-	font-size: 20px;
+    font-size: 20px;
+    font-family: 'Nunito', sans-serif;
+    padding-left: 5px;
 }
 
-
-div.gallery {
+div.tm {
   margin: 50px;
   border: none;
   float: left;
   width: 180px;
 }
 
-div.gallery img {
+div.tm img {
   width: 120%;
   height: auto;
+  position: relative;
 }
 
 div.caption {
   padding: 10px;
   text-align: center;
   color: #EC4067;
+  font-family: 'Nunito', sans-serif;
+}
+.still{
+    font-family: 'Nunito', sans-serif;
+    color: #EC4067;
+    font-size: 20;
+
+}
+.last{
+    font-size: 20px;
+    color: grey;
+    font-family: 'Nunito', sans-serif;
+    padding: 40px;
+}
+.jump{
+    background-color: whitesmoke;
+    padding-bottom: 40px;
+    text-align: center;
+
+}
+.ask{
+  background-color: #EC4067; 
+  border: none; 
+  color: white; 
+  padding: 10px 30px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 12px;
+  border-radius: 12px;
 }
 
+.en{
+  background-color: #EC4067; 
+  border: none; 
+  color: white; 
+  padding: 8px 10px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;
+  border-radius: 12px;
+}
+.e{
+    color: #EC4067;
+  padding: 10px 40px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;
+  border-radius: px;
+  border-color: #EC4067;
+  background-color: white;
+}
+#ot{
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;  
+}
+#story{
+    font-family: 'Nunito', sans-serif;
+    font-size: 27px;
+}
+#mem{
+    font-size: 13px;
+    color: grey;
+}
+#dev{
+     color: grey;
+     font-size: 12px;
+}
+#our{
+    font-family: 'Nunito', sans-serif; 
+    font-size: 19px;
+}
+#not{
+     font-family: 'Nunito', sans-serif; 
+     color: #EC4067 ;
+}
+#cool{
+    color: #EC4067 ;
+     font-family: 'Nunito', sans-serif;
+
+}
+#go{
+    padding: none;
+}
+#ahead{
+    font-family: 'Nunito', sans-serif;
+    font-size: 25px;
+}
+.k { 
+   position: absolute; 
+   top: 860px; 
+   left: 470px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+.board { 
+   position: absolute; 
+   top: 1100px; 
+   left: 100px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+
+.g { 
+   position: absolute; 
+   top: 1250px; 
+   left: 700px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+
+
+.meet { 
+   position: absolute; 
+   top: 1500px; 
+   left: 920px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+
+.f { 
+   position: absolute; 
+   top: 1580px; 
+   left: 450px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+
+.grad { 
+   position: absolute; 
+   top: 1830px; 
+   left: 90px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 20px;
+}
+
+.rose { 
+   position: absolute; 
+   top: 2190px; 
+   left: 150px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 19px;
+}
+
+.albert { 
+   position: absolute; 
+   top: 2190px; 
+   left: 420px; 
+   width: 100%; 
+   color: white; 
+   font-family: 'Nunito', sans-serif;
+   font-size: 19px;
+}
+
+.karimi { 
+   position: absolute; 
+   top: 2190px; 
+   left: 990px; 
+   width: 100%; 
+   color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 19px;
+}
+
+.katana { 
+   position: absolute; 
+   top: 2190px; 
+   left: 700px; 
+   width: 100%; 
+    color: white;
+   font-family: 'Nunito', sans-serif;
+   font-size: 19px;
+}
